--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ body {
   background-color: black;
 }
 
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 80vh;
+}
+
 .title {
   font-size: 3rem;
   color: white;
@@ -27,10 +34,10 @@ button {
   padding: 10px;
   background-color: steelblue;
   border-radius: 10px;
-  margin: 1rem;
-  width: 10rem;
+  margin: 1rem 5px;
+  width: 6rem;
   color: white;
-  font-weight: 900;
+  font-weight: 700;
   letter-spacing: 2px;
 }
 
@@ -56,8 +63,37 @@ button:hover {
   width: 5px;
 }
 
+.footer {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-size: bolder;
+}
+
+a.gitLink {
+  text-decoration: none;
+  font-family: inherit;
+  font-size: 2rem;
+  width: fit-content;
+  color: white;
+  padding: 0.5rem;
+  border-radius: 12px;
+  margin-left: 0.5rem;
+  letter-spacing: 2px;
+}
+
+a.gitLink:hover {
+  text-decoration: underline;
+  background-color: rgb(61, 61, 61);
+}
+
+.fa-github {
+  font-size: 2rem;
+}
+
 @media (max-width: 750px) {
-  .btns-box {
+  /* .btns-box {
     flex-direction: column;
-  }
+  } */
 }
